--- a/src/extension/locale/en-US/companion.properties
+++ b/src/extension/locale/en-US/companion.properties
@@ -2,3 +2,5 @@ helloMessage=Hello World!
 helloMessageTitle=Hello
 prefMessage=Int Pref Value: %d
 extensions.companion.description=Holds your hand as you explore the Web of Data.
+
+companion.facet.filterHint=type to filter
