--- a/src/extension/locale/en-US/companion.properties
+++ b/src/extension/locale/en-US/companion.properties
@@ -4,3 +4,4 @@ prefMessage=Int Pref Value: %d
 extensions.companion.description=Holds your hand as you explore the Web of Data.
 
 companion.facet.filterHint=type to filter
+companion.pageSession.activeAugmentingStagePage.filterByTypes.label=Filter by Types
