--- a/src/extension/locale/en-US/companion.dtd
+++ b/src/extension/locale/en-US/companion.dtd
@@ -1,4 +1,4 @@
 <!ENTITY companion.menuItem.toggleSidepane.label "Metaweb Companion">
 <!ENTITY companion.facet.resetLink.label "reset">
-
+<!ENTITY companion.facetContainer.resetAllLink.label "reset all">
 <!ENTITY companion.pageSession.activeAugmentingStagePage.filterbyProperties.label "Filter by Properties">
