Started to redesign the UI for the property facets: they are now shown in a tab-like listbox+deck control rather than just a listbox. This shows more readily which properties are available and also gives more screen area for more controls per facet.
Some styling work.

--- a/src/extension/locale/en-US/companion.dtd
+++ b/src/extension/locale/en-US/companion.dtd
@@ -1,4 +1,6 @@
 <!ENTITY companion.menuItem.toggleSidepane.label "Metaweb Companion">
 <!ENTITY companion.facet.resetLink.label "reset">
 <!ENTITY companion.facetContainer.resetAllLink.label "reset all">
-<!ENTITY companion.pageSession.activeAugmentingStagePage.filterbyProperties.label "Filter by Properties">
+
+<!ENTITY companion.pageSession.activeAugmentingStagePage.filterByTypes.label "Filter by Types">
+<!ENTITY companion.pageSession.activeAugmentingStagePage.filterByProperties.label "Filter by Properties">
