--- a/trunk/src/extension/locale/en-US/companion.properties
+++ b/trunk/src/extension/locale/en-US/companion.properties
@@ -3,5 +3,5 @@ helloMessageTitle=Hello
 prefMessage=Int Pref Value: %d
 extensions.companion.description=Holds your hand as you explore the Web of Data.
 
-companion.facet.filterHint=type to filter
+companion.facet.filterHint=type to filter the choices below
 companion.pageSession.activeAugmentingStagePage.filterByTypes.label=Filter by Types
