--- a/trunk/src/extension/locale/en-US/companion.dtd
+++ b/trunk/src/extension/locale/en-US/companion.dtd
@@ -1,6 +1,6 @@
 <!ENTITY companion.menuItem.toggleSidepane.label "Metaweb Companion">
-<!ENTITY companion.facet.resetLink.label "Clear selection in list above">
-<!ENTITY companion.facetContainer.resetAllLink.label "reset all">
+<!ENTITY companion.facet.resetLink.label "Reset selection">
+<!ENTITY companion.facetContainer.resetAllLink.label "Reset all selection">
 <!ENTITY companion.facet.fillInMissingData.label "Fill in missing data">
 
 <!ENTITY companion.pageSession.activeAugmentingStagePage.filterByTypes.label "Filter by Types">
